# unicode_confusables

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
apps/: confusables_normalize.cpp
bindings/: .gitignore  README.md  SETUP.md
bindings/csharp/: TestProgram.cs  UnicodeConfusables.cs  UnicodeConfusables.csproj  build.sh  unicode_confusables_c.cpp  unicode_confusables_c.h
bindings/python/: build.sh  pyproject.toml  requirements.txt  setup.py  test_unicode_confusables.py  unicode_confusables_py.cpp
bindings/python/unicode_confusables/: __init__.py
build_csharp/: confusables_codegen
include/: unicode_confusables.h  utf8_utils.h
src/: unicode_confusables.cpp
tests/: test_confusables.cc
tools/: confusables_codegen.cpp
