[build-system]
requires = ["pybind11>=2.6.0", "setuptools>=40.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unicode_confusables"
version = "1.0.0"
description = "Python bindings for Unicode Confusables detection and normalization"
license = {text = "MIT"}
authors = [
    {name = "Unicode Confusables Library"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security",
]
requires-python = ">=3.6"
dependencies = [
    "pybind11>=2.6.0"
]

[project.urls]
Homepage = "https://github.com/your-org/unicode_confusables"
Repository = "https://github.com/your-org/unicode_confusables"
Issues = "https://github.com/your-org/unicode_confusables/issues"
